# Usage4Claude-Windows

./: .gitignore  README.md  Usage4Claude-Windows.sln  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs  tray.rs
src-tauri/src/commands/: account.rs  app.rs  auth.rs  mod.rs  settings.rs  usage.rs
src-tauri/src/models/: account.rs  error.rs  mod.rs  settings.rs  usage.rs
src-tauri/src/services/: claude_api.rs  icon_renderer.rs  keyring_store.rs  mod.rs  notification.rs  refresh.rs  retry.rs  settings.rs  smart_monitor.rs  update_checker.rs
src/Usage4Claude/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Usage4Claude.csproj
src/Usage4Claude/Controls/: CircularProgress.xaml  CircularProgress.xaml.cs  UsageInfoRow.xaml  UsageInfoRow.xaml.cs
src/Usage4Claude/Helpers/: EnumToBoolConverter.cs  IconCache.cs  IconRenderer.cs
src/Usage4Claude/Models/: Account.cs  AccountDisplayItem.cs  DiagnosticReport.cs  Enums.cs  ErrorResponse.cs  ExtraUsageResponse.cs  Organization.cs  UsageData.cs  UsageError.cs  UsageResponse.cs  UserSettings.cs
src/Usage4Claude/Resources/: NotifyIconResources.xaml  Strings.Designer.cs  Strings.ja.resx  Strings.ko.resx  Strings.resx  Strings.zh-Hans.resx  Strings.zh-Hant.resx
src/Usage4Claude/Services/: AccountManager.cs  AutoStartService.cs  ClaudeApiService.cs  IconManager.cs  (+10 more)
src/lib/: api.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
(+39 files in other folders)
